Blender 2.75 crashes instantly without warning after importing COLLADA #46074

Closed
opened 2015-09-11 05:44:16 +02:00 by Michael Callaghan · 7 comments

System Information
Intel Core i3-4160
Nvidia Geforce GTX 750 TI 2GB Asus OC
8 GB of Ram

Blender Version
Broken: 2.75

Short description of error
After importing a COLLADA, which worked before, the second I click, Blender crashes faster than a millisecond.

Exact steps for others to reproduce the error

Datsun.dae

**System Information** Intel Core i3-4160 Nvidia Geforce GTX 750 TI 2GB Asus OC 8 GB of Ram **Blender Version** Broken: 2.75 **Short description of error** After importing a COLLADA, which worked before, the second I click, Blender crashes faster than a millisecond. **Exact steps for others to reproduce the error** [Datsun.dae](https://archive.blender.org/developer/F232107/Datsun.dae)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @GameNoobTV

Added subscriber: @GameNoobTV

Added subscribers: @GaiaClary, @Sergey

Added subscribers: @GaiaClary, @Sergey
Gaia Clary was assigned by Sergey Sharybin 2015-09-11 08:21:59 +02:00

Seems that either original model is corrupted or Collada importer produces corrupted mesh. In any case, mesh.validate() doesn't detect the corruption, so some closer look with a debugger needed.

@GaiaClary, mind checking this one? :)

Seems that either original model is corrupted or Collada importer produces corrupted mesh. In any case, mesh.validate() doesn't detect the corruption, so some closer look with a debugger needed. @GaiaClary, mind checking this one? :)
Member

I fix the crash next week. (at least i can improve the validate() function)

I fix the crash next week. (at least i can improve the validate() function)

This issue was referenced by 42825dc1fc

This issue was referenced by 42825dc1fc03609efed30259fa69cc31819be31c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46074
No description provided.