Fix T46074: Collada crashes importing animation

double-frees and freeing memory already inserted into Blender.